--- a/client/src/index.css
+++ b/client/src/index.css
@@ -129,6 +129,9 @@
   .card-text-adjust{
     font-size: 15px;
   }
+  .popup-responsive-small{
+    max-width: 450px;
+  }
 }
 
 @media (max-width:450px) {
